[project]
name = "17-mylab"
version = "0.1.0"
description = ""
authors = [
    {name = "Thierry HUET"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mystmd (>=1.3.23,<2.0.0)",
    "reportlab (>=4.4.1,<5.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "urwid (>=3.0.2,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
