[project]
name = "17-mylab"
version = "0.1.0"
description = ""
authors = [
    {name = "Thierry HUET"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mystmd (>=1.5.1,<2.0.0)",
    "robotframework-databaselibrary (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
